<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.trycouchbaselite.TryCouchbaseLiteActivity" >

    <LinearLayout
        android:id="@+id/crud_demo_ll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/doc_content_edt"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:lines="3" />

        <Button
            android:id="@+id/create_doc_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/button_top_margin"
            android:enabled="false"
            android:text="@string/create" />

        <Button
            android:id="@+id/delete_doc_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/button_top_margin"
            android:enabled="false"
            android:text="@string/delete" />

        <Button
            android:id="@+id/show_doc_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/button_top_margin"
            android:enabled="false"
            android:text="@string/show" />

        <TextView
            android:id="@+id/show_doc_txv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/button_top_margin"
            android:gravity="center" />

    </LinearLayout>
    
    
    <LinearLayout 
        android:layout_below="@+id/crud_demo_ll"
        android:id="@+id/attachment_demo_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:visibility="gone">
        
        <Button
            android:id="@+id/read_attachment_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/button_top_margin"
            android:text="@string/read_attachment" 
            android:layout_weight="1"/>
        
        <Button
            android:id="@+id/create_attachment_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/button_top_margin"
            android:text="@string/create_attachment"
            android:layout_weight="1" />

        <Button
            android:id="@+id/delete_attachment_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/button_top_margin"
            android:text="@string/delete_attachment"
            android:layout_weight="1" />
        
    </LinearLayout>

</RelativeLayout>